--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
  {
-    "name": "Button Click",
+    "name": "Old Button SFX",
     "version": "1.0",
     "description": "Pressing a button. Button will go brr.",
     "manifest_version": 2,
